# Library/routes/series.js
@@ -12,14 +12,14 @@ router.get('/', series.getData);
 //getting only the series with the specified id
 router.get('/:id', series.getData1);
 
-//adding a new series
-router.post('/', series.createseries);
+// //adding a new series
+// router.post('/', series.createseries);
 
-//edit a series by id
-router.put('/:id', series.editseries);
+// //edit a series by id
+// router.put('/:id', series.editseries);
 
-//delete a series by id
-router.delete('/:id', series.deleteseries);
+// //delete a series by id
+// router.delete('/:id', series.deleteseries);
 
 
 module.exports = router;
